# agendint-discord

./: .gitignore  discord_bot.py  get_all_schedules.py  image_generator.py  list_available_calendars.py  main.py  patch_agendint.py  pyproject.toml  scraper.py
